generate button fix

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 						<div class="col-lg-7 col-md-7">
 							<div class="form-group">
 								<label for="transactionform_to">Wallet address:</label>
-								<input type="text" class="form-control form-control-lg" id="transactionform_to" value="" placeholder="Here will be your new wallet address" readonly>
+								<input type="text" class="form-control form-control-lg" id="createwallet_input" value="" placeholder="Here will be your new wallet address" readonly>
 							</div>
 						</div>
 					</div>
