--- a/index.html
+++ b/index.html
@@ -153,13 +153,13 @@
 			<div class="api__overdevinf-block">
 				<div class="row">
 					<div class="col-md-5 col-sm-12 api__devinf-block row1">#MetaHash Developer Portal</div>
-					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a>https://support.metahash.com</a></div>
+					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a href="https://support.metahash.org" target="_blank">https://support.metahash.org</a></div>
 					<div class="col-md-5 col-sm-12 api__devinf-block row1">#MetaHash in GitHub</div>
-					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a>https://github.com/metahashorg</a></div>
+					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a href="https://github.com/metahashorg" target="_blank">https://github.com/metahashorg</a></div>
 					<div class="col-md-5 col-sm-12 api__devinf-block row1">Contact Support</div>
-					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a>support@metahash.org</a></div>
+					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a href="mailto:support@metahash.org">support@metahash.org</a></div>
 					<div class="col-md-5 col-sm-12 api__devinf-block row1">#MetaHash Website</div>
-					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a>https://metahash.org</a></div>
+					<div class="col-md-7 col-sm-12 api__devinf-block row2"><a href="https://metahash.org" target="_blank">https://metahash.org</a></div>
 				</div>
 			</div>
 		</div>
