ui-example: makeup fixes

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<h5>Developers API for #MHC transactions in #MetaHash network</h5>
 
 		<form id="transactionform" class="mt-5">
-			<div class="dropdown float-right ">
+			<div class="dropdown float-right text-muted mt-1">
 				<a id="network-title" class="btn dropdown-toggle" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-net="dev">
 					Current network: <span>dev</span>
 				</a>
