--- a/index.html
+++ b/index.html
@@ -72,7 +72,14 @@
 				<div class="col-sm-12 col-md-4">
 					<div class="form-group">
 						<label for="">&nbsp;</label>
-						<button class="btn btn-primary form-control form-control-lg">Send transaction</button>
+						<button class="btn btn-primary form-control form-control-lg" id="btn-send-tx">
+							<span class="spinner_reason">Send transaction</span>
+							<div class="spinner">
+								<div class="bounce1"></div>
+								<div class="bounce2"></div>
+								<div class="bounce3"></div>
+							</div>
+						</button>
 					</div>
 				</div>
 			</div>
@@ -181,7 +188,14 @@
 				<div class="col-lg-5 col-md-5">
 					<div class="form-group">
 						<label for="createwallet_button">Wallet keyfile will be stored in <code>data/</code></label>
-						<button class="btn btn-primary form-control form-control-lg" id="createwallet_button">Create wallet</button>
+						<button class="btn btn-primary form-control form-control-lg" id="createwallet_button">
+							<span class="spinner_reason">Create wallet</span>
+							<div class="spinner">
+								<div class="bounce1"></div>
+								<div class="bounce2"></div>
+								<div class="bounce3"></div>
+							</div>
+						</button>
 					</div>
 				</div>
 				<div class="col-lg-7 col-md-7">
@@ -244,6 +258,17 @@
 				.on('click', '#createwallet_button', generate_address);
 		});
 
+		function show_spinner(selector)
+		{
+			$(selector + ' .spinner_reason').hide();
+			$(selector + ' .spinner').addClass('active');
+		}
+		function hide_spinner(selector)
+		{
+			$(selector + ' .spinner_reason').show();
+			$(selector + ' .spinner').removeClass('active');
+		}
+
 		var config = {
 			net: 'dev'
 		};
@@ -302,6 +327,8 @@
 					data: $('#transactionform_data').val(),
 				};
 
+			show_spinner('#btn-send-tx');
+
 			$.ajax({
 				dataType: 'json',
 				method: 'GET',
@@ -309,6 +336,7 @@
 				data: query,
 				success: function(data)
 				{
+					hide_spinner('#btn-send-tx');
 					if(data.error == true)
 						return show_error(data.message);
 					if(data.params)
@@ -339,6 +367,7 @@
 				},
 				error: function(data)
 				{
+					hide_spinner('#btn-send-tx');
 					console.log('ajax error',data);
 					show_error('send-tx: network error<br>Make sure that you open this page from your web server');
 				}
@@ -420,6 +449,8 @@
 					net: config.net,
 				};
 
+			show_spinner('#createwallet_button');
+
 			$.ajax({
 				dataType: 'json',
 				method: 'GET',
@@ -427,6 +458,8 @@
 				data: query,
 				success: function(data)
 				{	
+					hide_spinner('#createwallet_button');
+
 					if(data.error == true)
 						return show_error(data.message);			
 					$('#createwallet_input').val(data.address);
@@ -440,6 +473,7 @@
 				},
 				error: function(data)
 				{
+					hide_spinner('#createwallet_button');
 					console.log('ajax error',data);
 					show_error('generate: network error<br>Make sure that you open this page from your web server');
 				}
